@@ -1,3 +1,10 @@
+2010-01-18  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* R/spModels.R (contr.poly): [the back-compatible-only version]:
+	do not use a default for 'scores'; rather rely on stats::contr.poly.
+
+	* tests/spModel.matrix.R: test that case
+
 2009-12-23  Martin Maechler  <maechler@stat.math.ethz.ch>
 
 	* tests/indexing.R: slightly adapt to the very slight [] changes.
